# json-extras

./: .pre-commit-config.yaml  README.md  pyproject.toml
json_extras/: load.py
test/: test_load.py
test/test_load/: json_with_placeholders.json
